--- a/software/stamp/sources/git-repository.yaml
+++ b/software/stamp/sources/git-repository.yaml
@@ -1,28 +1,28 @@
-# Example GitRepository source
+# Self-referencing GitRepository for this repository
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: osdu-ci-apps
+  name: osdu-ci-self
   namespace: flux-system
 spec:
   interval: 1m
-  url: https://github.com/your-username/osdu-ci-apps
+  url: https://community.opengroup.org/danielscholl/osdu-ci
   ref:
     branch: main
   ignore: |
     # exclude all
     /*
-    # include only the apps directory
-    !/apps/
+    # include only the apps directory for self-deployment
+    !/software/apps/
 ---
-# Example for a public Kubernetes examples repository
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
-metadata:
-  name: k8s-examples
-  namespace: flux-system
-spec:
-  interval: 5m
-  url: https://github.com/fluxcd/flux2-kustomize-helm-example
-  ref:
-    branch: main
+# Example for external Kubernetes examples (commented out by default)
+# apiVersion: source.toolkit.fluxcd.io/v1
+# kind: GitRepository
+# metadata:
+#   name: k8s-examples
+#   namespace: flux-system
+# spec:
+#   interval: 5m
+#   url: https://github.com/fluxcd/flux2-kustomize-helm-example
+#   ref:
+#     branch: main
