--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,23 +62,21 @@ sync-to-github:
     GIT_STRATEGY: clone
     GIT_DEPTH: 0
   before_script:
-    - apk add --no-cache git jq
+    - apk add --no-cache git python3
   script:
     - echo "Syncing code to GitHub repository..."
-    - test -n "$GITHUB_TOKEN" || exit 0
-    - test -n "$GITHUB_REPO" || exit 0
-    - echo "GITHUB_REPO=$GITHUB_REPO"
+    - test -n "$GITHUB_TOKEN" || (echo "Missing GITHUB_TOKEN"; exit 1)
+    - test -n "$GITHUB_REPO" || (echo "Missing GITHUB_REPO"; exit 1)
     - echo "Configuring git..."
     - git config --global user.email "ci@gitlab.com"
     - git config --global user.name "GitLab CI"
-    - echo "URL-encoding GitHub token..."
-    - GITHUB_URL=$(printf '%s' "$GITHUB_TOKEN" | jq -s -R -r @uri)
-    - echo "Adding GitHub remote..."
-    - git remote add github https://$GITHUB_URL@github.com/$GITHUB_REPO.git
+    - echo "Encoding token and adding remote..."
+    - GITHUB_ENCODED_TOKEN=$(python3 -c "import urllib.parse,sys; print(urllib.parse.quote(sys.argv[1]))" "$GITHUB_TOKEN")
+    - git remote add github https://$GITHUB_ENCODED_TOKEN@github.com/$GITHUB_REPO.git || git remote set-url github https://$GITHUB_ENCODED_TOKEN@github.com/$GITHUB_REPO.git
     - git remote -v
-    - echo "Pushing to GitHub..."
-    - git push github HEAD:main --force
-    - echo "Code synced to GitHub repository $GITHUB_REPO successfully"
+    - echo "Pushing to GitHub (force)..."
+    - git push github HEAD:main --force || (echo "Push failed"; exit 1)
+    - echo "Code synced successfully to $GITHUB_REPO"
   when: on_success
   allow_failure: false
 
