--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,19 +64,8 @@ sync-to-github:
   before_script:
     - apk add --no-cache git python3
   script:
-    - echo "Syncing code to GitHub repository..."
-    - test -n "$GITHUB_TOKEN" || (echo "Missing GITHUB_TOKEN"; exit 1)
-    - test -n "$GITHUB_REPO" || (echo "Missing GITHUB_REPO"; exit 1)
-    - echo "Configuring git..."
-    - git config --global user.email "ci@gitlab.com"
-    - git config --global user.name "GitLab CI"
-    - echo "Encoding token and adding remote..."
-    - GITHUB_ENCODED_TOKEN=$(python3 -c "import urllib.parse,sys; print(urllib.parse.quote(sys.argv[1]))" "$GITHUB_TOKEN")
-    - git remote add github https://$GITHUB_ENCODED_TOKEN@github.com/$GITHUB_REPO.git || git remote set-url github https://$GITHUB_ENCODED_TOKEN@github.com/$GITHUB_REPO.git
-    - git remote -v
-    - echo "Pushing to GitHub (force)..."
-    - git push github HEAD:main --force || (echo "Push failed"; exit 1)
-    - echo "Code synced successfully to $GITHUB_REPO"
+    - chmod +x sync-to-github.sh
+    - ./sync-to-github.sh
   when: on_success
   allow_failure: false
 
