--- a/software/apps/app1/app.yaml
+++ b/software/apps/app1/app.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:alpine
+        image: mcr.microsoft.com/azurelinux/base/nginx
         ports:
         - containerPort: 80
         resources:
