--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,14 +34,13 @@ test-tooling-validation:
   stage: test-tooling
   image: docker:27.0.3
   services:
-    - docker:27.0.3-dind
+    - name: docker:27.0.3-dind
+      command: ["--tls=false"]
   tags:
     - docker-small
   variables:
-    DOCKER_HOST: tcp://docker:2376
-    DOCKER_TLS_CERTDIR: "/certs"
-    DOCKER_TLS_VERIFY: 1
-    DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ""
   before_script:
     - echo "Installing tools with Docker base image..."
     - apk add --no-cache make bash curl
@@ -50,6 +49,9 @@ test-tooling-validation:
     - curl -LO "https://dl.k8s.io/release/v1.31.0/bin/linux/amd64/kubectl"
     - chmod +x kubectl && mv kubectl /usr/local/bin/
     - echo "Tools ready"
+    - echo "Waiting for Docker daemon to be ready..."
+    - until docker info >/dev/null 2>&1; do sleep 1; done
+    - echo "Docker daemon is ready"
   script:
     - echo "Testing tooling validation with Docker-in-Docker..."
     - make help
