Fix GitRepository reference mismatch in Kustomizations
Change sourceRef.name from 'osdu-ci-apps' to 'osdu-ci-self' to match
the actual GitRepository created by the GitOps testing workflow.

Files fixed:
- software/stamp/clusters/osdu-ci/apps.yaml
- software/stamp/clusters/osdu-ci/infrastructure.yaml

This resolves the error:
GitRepository.source.toolkit.fluxcd.io "osdu-ci-apps" not found

The Kustomizations should now reconcile successfully with the correct
GitRepository reference.

--- a/software/stamp/clusters/osdu-ci/apps.yaml
+++ b/software/stamp/clusters/osdu-ci/apps.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   sourceRef:
     kind: GitRepository
-    name: osdu-ci-apps
+    name: osdu-ci-self
   path: "./apps/osdu-ci"
   prune: true
   wait: true
