Fix GitOps paths to use actual software/stamp directory structure
- Update infrastructure.yaml to point to software/stamp/sources
- Update apps.yaml to point to software/stamp/apps
- Add missing kustomization.yaml files in sources and apps directories
- This fixes the 'path not found' errors in Flux reconciliation

--- a/software/stamp/clusters/osdu-ci/infrastructure.yaml
+++ b/software/stamp/clusters/osdu-ci/infrastructure.yaml
@@ -9,7 +9,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: osdu-ci-self
-  path: "./infrastructure/osdu-ci"
+  path: "./software/stamp/sources"
   prune: true
   wait: true
   timeout: 5m
