--- a/software/stamp/clusters/osdu-ci/apps.yaml
+++ b/software/stamp/clusters/osdu-ci/apps.yaml
@@ -9,7 +9,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: osdu-ci-self
-  path: "./apps/osdu-ci"
+  path: "./software/stamp/apps"
   prune: true
   wait: true
   timeout: 2m
