Fix GitRepository ignore pattern to include software directory
- The osdu-ci-self GitRepository was ignoring the software/stamp directory
- This caused Flux Kustomizations to fail with 'path not found' errors
- Now includes the entire software/ directory needed for GitOps

--- a/software/stamp/sources/git-repository.yaml
+++ b/software/stamp/sources/git-repository.yaml
@@ -12,8 +12,8 @@ spec:
   ignore: |
     # exclude all
     /*
-    # include only the apps directory for self-deployment
-    !/software/apps/
+    # include directories needed for GitOps
+    !/software/
 ---
 # Example for external Kubernetes examples (commented out by default)
 # apiVersion: source.toolkit.fluxcd.io/v1
