Fix trailing spaces and align pre-commit with GitLab CI yamllint config
ISSUE: Pre-commit wasn't catching trailing spaces that GitLab CI flagged

ROOT CAUSE:
- Pre-commit yamllint used 'relaxed' rules
- GitLab CI yamllint used strict '.yamllint.yaml' rules
- Configuration mismatch meant pre-commit missed issues

FIXES:
- Updated pre-commit to use same .yamllint.yaml config as GitLab CI
- Fixed trailing spaces in .gitlab-ci.yml
- Added missing newline in .pre-commit-config.yaml
- Ensured pre-commit hooks are installed

NOW: Pre-commit and GitLab CI use identical YAML validation rules

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     hooks:
       - id: yamllint
         name: Lint YAML files
-        args: ['-d', 'relaxed']  # Use relaxed rules initially
+        args: ['-c', '.yamllint.yaml']  # Use same config as GitLab CI
         files: \.(yaml|yml)$
 
   - repo: local
