Standardize GitLab CI and GitHub Actions naming conventions
MAJOR IMPROVEMENT: Complete naming standardization across both systems

GITLAB CI CHANGES:
• Stages: validate → deploy → test (industry standard)
• Jobs: make, yaml, github, execute, status (clean, descriptive)
• Removed: validate-structure (provided no real value)

GITHUB ACTIONS CHANGES:
• Workflow: 'OSDU-CI Cluster Testing' (project-specific)
• Jobs: cluster-minimal, cluster-default, notify (clear purpose)
• Added: Dynamic run names with GitLab pipeline info

BENEFITS:
✅ Standard CI/CD terminology throughout
✅ Self-documenting job names that reflect actual functionality
✅ Better traceability between GitLab and GitHub pipelines
✅ Professional, consistent naming conventions
✅ Removed redundant validation that added no value

PIPELINE FLOW:
GitLab: validate[make,yaml] → deploy[github] → test[execute,status]
GitHub: cluster-minimal → cluster-default → notify

This creates a clean, professional CI/CD pipeline with intuitive naming
that accurately reflects what each stage and job actually does.

--- a/.github/workflows/gitops-testing.yml
+++ b/.github/workflows/gitops-testing.yml
@@ -1,4 +1,6 @@
-name: GitOps Reconciliation Testing
+name: OSDU-CI Cluster Testing
+
+run-name: ${{ github.event_name == 'repository_dispatch' && format('GitLab Pipeline {0} - Cluster Testing', github.event.client_payload.gitlab_pipeline_id) || 'OSDU-CI Cluster Testing' }}
 
 on:
   repository_dispatch:
@@ -16,7 +18,7 @@ on:
           - gitops
 
 jobs:
-  test-flux-minimal:
+  cluster-minimal:
     runs-on: ubuntu-latest
     timeout-minutes: 8
     outputs:
@@ -97,7 +99,7 @@ jobs:
             exit 1
           fi
 
-  test-flux-full-gitops:
+  cluster-default:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     if: ${{ github.event.inputs.test_scenario != 'minimal' }}
@@ -283,9 +285,9 @@ jobs:
             echo "✅ Complete GitOps reconciliation successful"
           fi
 
-  report-gitops-results:
+  notify:
     runs-on: ubuntu-latest
-    needs: [test-flux-minimal, test-flux-full-gitops]
+    needs: [cluster-minimal, cluster-default]
     if: always()
 
     steps:
@@ -295,18 +297,18 @@ jobs:
           echo "========================================"
           echo ""
 
-          echo "🔹 Minimal Flux Test: ${{ needs.test-flux-minimal.result }}"
-          echo "   Status: ${{ needs.test-flux-minimal.outputs.flux_status }}"
+          echo "🔹 Minimal Cluster Test: ${{ needs.cluster-minimal.result }}"
+          echo "   Status: ${{ needs.cluster-minimal.outputs.flux_status }}"
           echo ""
 
-          echo "🔹 Full GitOps Test: ${{ needs.test-flux-full-gitops.result }}"
-          echo "   Status: ${{ needs.test-flux-full-gitops.outputs.gitops_status }}"
-          echo "   Summary: ${{ needs.test-flux-full-gitops.outputs.reconciliation_summary }}"
+          echo "🔹 Default Cluster Test: ${{ needs.cluster-default.result }}"
+          echo "   Status: ${{ needs.cluster-default.outputs.gitops_status }}"
+          echo "   Summary: ${{ needs.cluster-default.outputs.reconciliation_summary }}"
           echo ""
 
           # Overall status
           overall_status="success"
-          if [ "${{ needs.test-flux-minimal.result }}" != "success" ] || [ "${{ needs.test-flux-full-gitops.result }}" != "success" ]; then
+          if [ "${{ needs.cluster-minimal.result }}" != "success" ] || [ "${{ needs.cluster-default.result }}" != "success" ]; then
             overall_status="failed"
           fi
 
@@ -340,7 +342,7 @@ jobs:
         run: |
           # Overall status
           overall_status="success"
-          if [ "${{ needs.test-flux-minimal.result }}" != "success" ] || [ "${{ needs.test-flux-full-gitops.result }}" != "success" ]; then
+          if [ "${{ needs.cluster-minimal.result }}" != "success" ] || [ "${{ needs.cluster-default.result }}" != "success" ]; then
             overall_status="failed"
           fi
 
