--- a/.github/workflows/gitops-testing.yml
+++ b/.github/workflows/gitops-testing.yml
@@ -27,14 +27,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.client_payload.gitlab_commit_sha || github.sha }}
 
       - name: Log GitLab trigger context
         if: github.event_name == 'repository_dispatch'
         run: |
-          echo "🔍 GitOps testing triggered by GitLab CI"
+          echo "🔍 Cluster testing triggered by GitLab CI"
           echo "GitLab Pipeline ID: ${{ github.event.client_payload.gitlab_pipeline_id }}"
           echo "GitLab Commit: ${{ github.event.client_payload.gitlab_commit_sha }}"
+          echo "GitLab Branch: ${{ github.event.client_payload.gitlab_ref }}"
           echo "GitLab Pipeline URL: ${{ github.event.client_payload.gitlab_pipeline_url }}"
+          echo ""
+          if [ "${{ github.event.client_payload.gitlab_ref }}" = "main" ]; then
+            echo "🚀 Main branch detected - Full testing will run (minimal + default clusters)"
+          else
+            echo "🔄 PR branch detected - Fast testing will run (minimal cluster only)"
+            echo "📝 Branch: ${{ github.event.client_payload.gitlab_ref }}"
+          fi
 
       - name: Create minimal Kind cluster
         uses: helm/kind-action@v1
@@ -102,7 +112,7 @@ jobs:
   cluster-default:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    if: ${{ github.event.inputs.test_scenario != 'minimal' }}
+    if: ${{ github.event.inputs.test_scenario != 'minimal' && (github.event.client_payload.gitlab_ref == 'main' || github.event.client_payload.gitlab_ref == '' || github.event_name == 'workflow_dispatch') }}
     outputs:
       gitops_status: ${{ steps.gitops_validation.outputs.status }}
       reconciliation_summary: ${{ steps.gitops_validation.outputs.summary }}
@@ -110,6 +120,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.client_payload.gitlab_commit_sha || github.sha }}
 
       - name: Report GitOps testing start to GitLab
         if: github.event_name == 'repository_dispatch' && github.event.client_payload.gitlab_commit_sha
@@ -293,23 +305,44 @@ jobs:
     steps:
       - name: Report comprehensive GitOps results
         run: |
-          echo "📊 GitOps Reconciliation Testing Results:"
-          echo "========================================"
+          echo "📊 OSDU-CI Cluster Testing Results:"
+          echo "=================================="
           echo ""
 
-          echo "🔹 Minimal Cluster Test: ${{ needs.cluster-minimal.result }}"
-          echo "   Status: ${{ needs.cluster-minimal.outputs.flux_status }}"
-          echo ""
-
-          echo "🔹 Default Cluster Test: ${{ needs.cluster-default.result }}"
-          echo "   Status: ${{ needs.cluster-default.outputs.gitops_status }}"
-          echo "   Summary: ${{ needs.cluster-default.outputs.reconciliation_summary }}"
+          # Determine testing type
+          if [ "${{ github.event.client_payload.gitlab_ref }}" = "main" ]; then
+            echo "🚀 Main Branch - Full Testing Results:"
+            echo ""
+            echo "🔹 Minimal Cluster Test: ${{ needs.cluster-minimal.result }}"
+            echo "   Status: ${{ needs.cluster-minimal.outputs.flux_status }}"
+            echo ""
+            echo "🔹 Default Cluster Test: ${{ needs.cluster-default.result }}"
+            echo "   Status: ${{ needs.cluster-default.outputs.gitops_status }}"
+            echo "   Summary: ${{ needs.cluster-default.outputs.reconciliation_summary }}"
+          else
+            echo "🔄 PR Branch - Fast Testing Results:"
+            echo "📝 Branch: ${{ github.event.client_payload.gitlab_ref }}"
+            echo ""
+            echo "🔹 Minimal Cluster Test: ${{ needs.cluster-minimal.result }}"
+            echo "   Status: ${{ needs.cluster-minimal.outputs.flux_status }}"
+            echo ""
+            echo "🔹 Default Cluster Test: Skipped (PR branch - fast feedback)"
+          fi
           echo ""
 
           # Overall status
           overall_status="success"
-          if [ "${{ needs.cluster-minimal.result }}" != "success" ] || [ "${{ needs.cluster-default.result }}" != "success" ]; then
-            overall_status="failed"
+
+          # For main branch: check both jobs
+          if [ "${{ github.event.client_payload.gitlab_ref }}" = "main" ]; then
+            if [ "${{ needs.cluster-minimal.result }}" != "success" ] || [ "${{ needs.cluster-default.result }}" != "success" ]; then
+              overall_status="failed"
+            fi
+          # For PR branches: only check minimal (default is skipped)
+          else
+            if [ "${{ needs.cluster-minimal.result }}" != "success" ]; then
+              overall_status="failed"
+            fi
           fi
 
           if [ "$overall_status" = "success" ]; then
@@ -340,23 +373,41 @@ jobs:
       - name: Report status back to GitLab
         if: github.event_name == 'repository_dispatch' && github.event.client_payload.gitlab_commit_sha
         run: |
-          # Overall status
+          # Overall status based on branch type
           overall_status="success"
-          if [ "${{ needs.cluster-minimal.result }}" != "success" ] || [ "${{ needs.cluster-default.result }}" != "success" ]; then
-            overall_status="failed"
+
+          # For main branch: check both jobs
+          if [ "${{ github.event.client_payload.gitlab_ref }}" = "main" ]; then
+            if [ "${{ needs.cluster-minimal.result }}" != "success" ] || [ "${{ needs.cluster-default.result }}" != "success" ]; then
+              overall_status="failed"
+            fi
+          # For PR branches: only check minimal (default is skipped)
+          else
+            if [ "${{ needs.cluster-minimal.result }}" != "success" ]; then
+              overall_status="failed"
+            fi
           fi
 
-          # Prepare status message
+          # Prepare status message based on branch and result
           if [ "$overall_status" = "success" ]; then
             state="success"
-            description="GitOps reconciliation tests passed: Flux healthy, sources reconciled"
+            if [ "${{ github.event.client_payload.gitlab_ref }}" = "main" ]; then
+              description="GitOps tests passed: Full validation (minimal + default clusters)"
+            else
+              description="GitOps tests passed: Fast validation (minimal cluster) - Branch: ${{ github.event.client_payload.gitlab_ref }}"
+            fi
           else
             state="failed"
-            description="GitOps reconciliation tests failed: Check logs for details"
+            if [ "${{ github.event.client_payload.gitlab_ref }}" = "main" ]; then
+              description="GitOps tests failed: Check full validation logs for details"
+            else
+              description="GitOps tests failed: Check fast validation logs - Branch: ${{ github.event.client_payload.gitlab_ref }}"
+            fi
           fi
 
           echo "📤 Reporting status back to GitLab..."
           echo "Commit: ${{ github.event.client_payload.gitlab_commit_sha }}"
+          echo "Branch: ${{ github.event.client_payload.gitlab_ref }}"
           echo "Status: $state"
           echo "Description: $description"
 
